--- a/css/quiz_style.scss
+++ b/css/quiz_style.scss
@@ -1,21 +1,26 @@
 /* Quiz styles */
+//Variables
+$bgcolor: lightblue;
+$font: verdana;
+$left: 150px;
+$padding: 50px;
 
 header {
     border: 2px solid #064277;
     border-radius: 20px;
     margin: 10px auto;
-    padding: 10px;
-    background-color: aliceblue;
+    padding: $padding;
+    background-color: $bgcolor;
     text-align: center;
 }
 
 body {
     width: 600px;
     margin: auto;
-    font-family:sans-serif;
+    font-family:$font;
     font-size: 1em;
     font-style:oblique;
-    background-color: #dadadb
+    background-color: aliceblue;
 }
 
 
@@ -28,13 +33,13 @@ h1 {
     border-radius: 20px;
     margin: 10px auto;
     padding: 10px;
-    background-color: aliceblue;
+    background-color: $bgcolor;
 }
 
 #list{
     border: 2px solid #064277;
     border-radius: 20px;
-    background-color: aliceblue;
+    background-color: $bgcolor;
 }
 
 h2 {
@@ -42,24 +47,24 @@ h2 {
 }
 
 h3 {
-    margin-left: 50px;
+    margin-left: $left;
     color:#58a0e0
 }
 
 ul{
-    margin-left: 50px;
+    margin-left: $left;
 }
 
 p{
-    font-family: serif;
+    font-family: $font;
     font-style:normal;
 }
 
 .samplepara {
     border: 3px solid #58a0e0;
     border-radius: 5px;
-    padding: 10px;
-    background-color: white;
+    padding: $padding;
+    background-color: $bgcolor;
 }
 
 footer {
@@ -67,13 +72,15 @@ footer {
     border-radius: 20px;
     margin: 10px auto;
     padding: 10px;
-    background-color: aliceblue;
+    background-color: $bgcolor;
 }
 
 #footer {
-    font-size: .75em;
-    font-style:italic;
-    font-weight: bold;
+    font{ 
+    size: .75em;
+    style:italic;
+    weight: bold;
+    }
     color: #064277;
     text-align: center;
 }
