--- a/css/quiz_style.css
+++ b/css/quiz_style.css
@@ -1,7 +1,7 @@
 /* Quiz styles */
 header {
   border: 2px solid #064277;
-  border-radius: 20px;
+  border-radius: gray dotted thick;
   margin: 10px auto;
   padding: 50px;
   background-color: lightblue;
@@ -20,14 +20,14 @@ h1 {
 
 #content {
   border: 2px solid #064277;
-  border-radius: 20px;
+  border-radius: gray dotted thick;
   margin: 10px auto;
   padding: 10px;
   background-color: lightblue; }
 
 #list {
   border: 2px solid #064277;
-  border-radius: 20px;
+  border-radius: gray dotted thick;
   background-color: lightblue; }
 
 h2 {
@@ -46,13 +46,13 @@ p {
 
 .samplepara {
   border: 3px solid #58a0e0;
-  border-radius: 5px;
+  border-radius: gray dotted thick;
   padding: 50px;
   background-color: lightblue; }
 
 footer {
   border: 2px solid #064277;
-  border-radius: 20px;
+  border-radius: gray dotted thick;
   margin: 10px auto;
   padding: 10px;
   background-color: lightblue; }
